# CmakeTemplate

./: CMakeLists.txt  README.md
cmake/: find_CLI11.cmake  find_ipopt.cmake  find_libigl.cmake  find_spdlog.cmake
src/: CMakeLists.txt  hello_world.cpp
test/: CMakeLists.txt
